Nothing new just a check

--- a/notebooks/attribute_building/Data_builder.ipynb
+++ b/notebooks/attribute_building/Data_builder.ipynb
@@ -47,6 +47,7 @@
    "source": [
     "data = data[(data.timeStamp != \"0000-00-00 00:00:00\" ) & (data.timeStamp != \"2000-01-01 00:00:00\")]\n",
     "data = data[(data.tot1 != 0 ) & (data.analog2 != 0)]\n",
+    "#  uncomment if you want day,hour ...\n",
     "data[\"timeStamp\"] = pandas.to_datetime(data[\"timeStamp\"], format=\"%Y-%m-%d %H:%M\")\n",
     "\n",
     "# data_with_minutes = data.copy(deep=True)\n",
@@ -700,6 +701,269 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>SensorID-249</th>\n",
+       "      <th>timeStamp-dateTime</th>\n",
+       "      <th>tot1</th>\n",
+       "      <th>tot2</th>\n",
+       "      <th>analog2</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>tot1 change</th>\n",
+       "      <th>tot2 change</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timeStamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1542963360</th>\n",
+       "      <td>2018-11-23 08:56:00</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542963420</th>\n",
+       "      <td>2018-11-23 08:57:00</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542963480</th>\n",
+       "      <td>2018-11-23 08:58:00</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542963540</th>\n",
+       "      <td>2018-11-23 08:59:00</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542963600</th>\n",
+       "      <td>2018-11-23 09:00:00</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585730100</th>\n",
+       "      <td>2020-04-01 08:35:00</td>\n",
+       "      <td>797188.56</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585730160</th>\n",
+       "      <td>2020-04-01 08:36:00</td>\n",
+       "      <td>797192.50</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585730220</th>\n",
+       "      <td>2020-04-01 08:37:00</td>\n",
+       "      <td>797195.06</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585730280</th>\n",
+       "      <td>2020-04-01 08:38:00</td>\n",
+       "      <td>797197.62</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585730340</th>\n",
+       "      <td>2020-04-01 08:39:00</td>\n",
+       "      <td>797200.25</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2.63</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>705857 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "SensorID-249  timeStamp-dateTime       tot1    tot2  analog2  day  month  \\\n",
+       "timeStamp                                                                  \n",
+       "1542963360   2018-11-23 08:56:00       0.89    0.00     1.11   23     11   \n",
+       "1542963420   2018-11-23 08:57:00       1.38    0.00     1.11   23     11   \n",
+       "1542963480   2018-11-23 08:58:00       1.90    0.00     1.11   23     11   \n",
+       "1542963540   2018-11-23 08:59:00       2.45    0.00     1.11   23     11   \n",
+       "1542963600   2018-11-23 09:00:00       3.02    0.00     1.12   23     11   \n",
+       "...                          ...        ...     ...      ...  ...    ...   \n",
+       "1585730100   2020-04-01 08:35:00  797188.56 -293.97     0.82    1      4   \n",
+       "1585730160   2020-04-01 08:36:00  797192.50 -293.97     0.81    1      4   \n",
+       "1585730220   2020-04-01 08:37:00  797195.06 -293.97     0.81    1      4   \n",
+       "1585730280   2020-04-01 08:38:00  797197.62 -293.97     0.81    1      4   \n",
+       "1585730340   2020-04-01 08:39:00  797200.25 -293.97     0.82    1      4   \n",
+       "\n",
+       "SensorID-249  year  hour  minute  tot1 change  tot2 change  \n",
+       "timeStamp                                                   \n",
+       "1542963360    2018     8      56         0.46          0.0  \n",
+       "1542963420    2018     8      57         0.49          0.0  \n",
+       "1542963480    2018     8      58         0.52          0.0  \n",
+       "1542963540    2018     8      59         0.55          0.0  \n",
+       "1542963600    2018     9       0         0.57          0.0  \n",
+       "...            ...   ...     ...          ...          ...  \n",
+       "1585730100    2020     8      35         1.25          0.0  \n",
+       "1585730160    2020     8      36         3.94          0.0  \n",
+       "1585730220    2020     8      37         2.56          0.0  \n",
+       "1585730280    2020     8      38         2.56          0.0  \n",
+       "1585730340    2020     8      39         2.63          0.0  \n",
+       "\n",
+       "[705857 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import datetime\n",
+    "# data_249_final.to_csv(\"braila_test.csv\")\n",
+    "# datetime.fromtimestamp(0) .to_csv(\"braila_test.csv\")\n",
+    "data_249_csv = data_249_final.reset_index()\n",
+    "data_249_csv.index = data_249_csv[\"timeStamp\"].astype(np.int64)// 10**9\n",
+    "data_249_csv = data_249_csv.rename(columns={\"timeStamp\": \"timeStamp-dateTime\"})\n",
+    "# datetime.datetime.fromtimestamp(data_249_final.index)\n",
+    "# data_249_final.index.astype(np.int64)// 10**9\n",
+    "data_249_csv.to_csv(\"braila_test.csv\")\n",
+    "data_249_csv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -708,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +981,7 @@
        "'fig = px.line(data_249_final, x=data_249_final.index, y=\"tot1 change\", height=600)\\nfig.show()'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
