--- a/notebooks/Result presentation.ipynb
+++ b/notebooks/Result presentation.ipynb
@@ -9,9 +9,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timeStamp</th>\n",
+       "      <th>idflowmeter</th>\n",
+       "      <th>tot1</th>\n",
+       "      <th>tot2</th>\n",
+       "      <th>analog2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>2018-11-23 08:55:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2018-11-23 08:56:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>2018-11-23 08:57:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>2018-11-23 08:58:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>2018-11-23 08:59:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395620</th>\n",
+       "      <td>2020-04-01 08:35:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>797188.56</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395621</th>\n",
+       "      <td>2020-04-01 08:36:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>797192.50</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395622</th>\n",
+       "      <td>2020-04-01 08:37:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>797195.06</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395623</th>\n",
+       "      <td>2020-04-01 08:38:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>797197.62</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395624</th>\n",
+       "      <td>2020-04-01 08:39:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>797200.25</td>\n",
+       "      <td>-293.97</td>\n",
+       "      <td>0.82</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>710813 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  timeStamp         idflowmeter       tot1    tot2  analog2\n",
+       "105     2018-11-23 08:55:00  MAG8000_024905H318       0.43    0.00     1.11\n",
+       "106     2018-11-23 08:56:00  MAG8000_024905H318       0.89    0.00     1.11\n",
+       "107     2018-11-23 08:57:00  MAG8000_024905H318       1.38    0.00     1.11\n",
+       "108     2018-11-23 08:58:00  MAG8000_024905H318       1.90    0.00     1.11\n",
+       "109     2018-11-23 08:59:00  MAG8000_024905H318       2.45    0.00     1.11\n",
+       "...                     ...                 ...        ...     ...      ...\n",
+       "1395620 2020-04-01 08:35:00  MAG8000_024905H318  797188.56 -293.97     0.82\n",
+       "1395621 2020-04-01 08:36:00  MAG8000_024905H318  797192.50 -293.97     0.81\n",
+       "1395622 2020-04-01 08:37:00  MAG8000_024905H318  797195.06 -293.97     0.81\n",
+       "1395623 2020-04-01 08:38:00  MAG8000_024905H318  797197.62 -293.97     0.81\n",
+       "1395624 2020-04-01 08:39:00  MAG8000_024905H318  797200.25 -293.97     0.82\n",
+       "\n",
+       "[710813 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -49,16 +193,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timeStamp</th>\n",
+       "      <th>idflowmeter</th>\n",
+       "      <th>tot1</th>\n",
+       "      <th>tot2</th>\n",
+       "      <th>analog2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>2018-11-23 08:55:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2018-11-23 08:56:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>2018-11-23 08:57:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>2018-11-23 08:58:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>2018-11-23 08:59:00</td>\n",
+       "      <td>MAG8000_024905H318</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395740</th>\n",
+       "      <td>2020-04-01 14:05:00</td>\n",
+       "      <td>MAG8000_024805H318</td>\n",
+       "      <td>977428.25</td>\n",
+       "      <td>-4713.21</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395741</th>\n",
+       "      <td>2020-04-01 14:06:00</td>\n",
+       "      <td>MAG8000_024805H318</td>\n",
+       "      <td>977428.88</td>\n",
+       "      <td>-4713.21</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395742</th>\n",
+       "      <td>2020-04-01 14:07:00</td>\n",
+       "      <td>MAG8000_024805H318</td>\n",
+       "      <td>977429.50</td>\n",
+       "      <td>-4713.21</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395743</th>\n",
+       "      <td>2020-04-01 14:08:00</td>\n",
+       "      <td>MAG8000_024805H318</td>\n",
+       "      <td>977430.12</td>\n",
+       "      <td>-4713.21</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395744</th>\n",
+       "      <td>2020-04-01 14:09:00</td>\n",
+       "      <td>MAG8000_024805H318</td>\n",
+       "      <td>977430.75</td>\n",
+       "      <td>-4713.21</td>\n",
+       "      <td>1.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1390649 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  timeStamp         idflowmeter       tot1     tot2  analog2\n",
+       "105     2018-11-23 08:55:00  MAG8000_024905H318       0.43     0.00     1.11\n",
+       "106     2018-11-23 08:56:00  MAG8000_024905H318       0.89     0.00     1.11\n",
+       "107     2018-11-23 08:57:00  MAG8000_024905H318       1.38     0.00     1.11\n",
+       "108     2018-11-23 08:58:00  MAG8000_024905H318       1.90     0.00     1.11\n",
+       "109     2018-11-23 08:59:00  MAG8000_024905H318       2.45     0.00     1.11\n",
+       "...                     ...                 ...        ...      ...      ...\n",
+       "1395740 2020-04-01 14:05:00  MAG8000_024805H318  977428.25 -4713.21     1.54\n",
+       "1395741 2020-04-01 14:06:00  MAG8000_024805H318  977428.88 -4713.21     1.54\n",
+       "1395742 2020-04-01 14:07:00  MAG8000_024805H318  977429.50 -4713.21     1.54\n",
+       "1395743 2020-04-01 14:08:00  MAG8000_024805H318  977430.12 -4713.21     1.54\n",
+       "1395744 2020-04-01 14:09:00  MAG8000_024805H318  977430.75 -4713.21     1.53\n",
+       "\n",
+       "[1390649 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['15-12-2018', '19-12-2018', '20-12-2018', '22-12-2018', '24-12-2018', '26-12-2018', '27-12-2018', '28-12-2018', '30-12-2018', '01-01-2019', '02-01-2019', '03-01-2019', '04-01-2019', '05-01-2019', '09-01-2019', '10-01-2019', '11-01-2019', '12-01-2019', '13-01-2019', '14-01-2019', '15-01-2019', '16-01-2019', '18-01-2019', '19-01-2019', '20-01-2019', '22-01-2019', '24-01-2019', '25-01-2019', '26-01-2019', '27-01-2019', '29-01-2019', '30-01-2019', '31-01-2019', '01-02-2019', '02-02-2019', '04-02-2019', '05-02-2019', '06-02-2019', '08-02-2019', '09-02-2019', '10-02-2019', '11-02-2019', '12-02-2019', '13-02-2019', '15-02-2019', '20-02-2019', '23-02-2019', '24-02-2019', '28-02-2019', '01-03-2019', '02-03-2019', '03-03-2019', '06-03-2019', '07-03-2019', '09-03-2019', '12-03-2019', '13-03-2019', '16-03-2019', '17-03-2019', '19-03-2019', '20-03-2019', '21-03-2019', '22-03-2019', '23-03-2019', '24-03-2019', '25-03-2019', '26-03-2019', '27-03-2019', '28-03-2019', '29-03-2019', '30-03-2019', '31-03-2019', '01-04-2019', '02-04-2019', '03-04-2019', '04-04-2019', '05-04-2019', '07-04-2019', '09-04-2019', '13-04-2019', '14-04-2019', '15-04-2019', '16-04-2019', '19-04-2019', '04-05-2019', '06-05-2019', '12-05-2019', '13-05-2019', '14-05-2019', '15-05-2019', '13-06-2019', '14-06-2019', '22-06-2019', '25-06-2019', '26-06-2019', '27-06-2019']\n"
+     ]
+    }
+   ],
    "source": [
     "# anomaly_rows_248 = data_248_min.loc[(data_248_min['analog2'] <= 0.72)]\n",
     "data_249_processed = data_sel_time(\"2018-11-28 08:00:00\", \"2020-06-26 08:00:00\", data_248_min)\n",
@@ -123,9 +419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'df = data_sel_time(\"2018-11-20 08:00:00\", \"2020-06-26 08:00:00\", data_249_min)\\nx = df[\"timeStamp\"].values\\ny = df[\"analog2\"].values\\n# print(x)\\n\\nfig = px.line(df, x=\"timeStamp\", y=\"analog2\", height=600)\\nfig.show()'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"df = data_sel_time(\"2018-11-20 08:00:00\", \"2020-06-26 08:00:00\", data_249_min)\n",
     "x = df[\"timeStamp\"].values\n",
@@ -152,9 +459,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-3a0db6990093>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_d\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_d\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mderivate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \"\"\"\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# With \"critical points\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x_d, y_d = derivate(x, y)\n",
     "\n",
